// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="PicassoFormLabel-root PicassoFormLabel-disabled"
        >
          <span
            class="PicassoFormLabel-textMedium"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="PicassoFormLabel-root"
        >
          <span
            class="PicassoFormLabel-textMedium"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with (optional) 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="PicassoFormLabel-root"
        >
          <span
            class="PicassoFormLabel-textMedium"
          >
            Label
             (optional)
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with asterisk 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="PicassoFormLabel-root"
        >
          <span
            class="PicassoFormLabel-asterisk"
          >
            *
          </span>
          <span
            class="PicassoFormLabel-textMedium"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel should render large label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
        data-field-has-error="false"
      >
        <label
          class="PicassoFormLabel-root"
        >
          <span
            class="PicassoFormLabel-textLarge"
          >
            I am a large label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;
